--- a/light_space/client/style.css
+++ b/light_space/client/style.css
@@ -7,6 +7,91 @@ body {
     background-color: black;
 }
 
+#main-container {
+    display: flex;
+    flex-direction: row;
+}
+
+#program-container {
+    width: 20%;
+    color: whitesmoke;
+    font-family: 'JetBrains Mono', monospace;
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+}
+
+.program-line {
+    max-width: 95%;
+}
+
+.livelit-window {
+    max-width: 90%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border: 1px solid whitesmoke;
+    padding: 5px 10px 5px 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.livelit-window .title {
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.livelit-window .content {
+    margin-bottom: 10px;
+}
+
+.livelit-window .gallery {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.livelit-window .gallery .gallery-item {
+    height: 50px;
+    width: 50px;
+    background-color: whitesmoke;
+    color: black;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.program-controls {
+    margin-top: 20px;
+    height: 75px;
+    display: flex;
+    flex-direction: row;
+}
+
+.program-controls .pc-btn {
+    height: 36px;
+    width: 100px;
+    background-color: whitesmoke;
+    color: black;
+    text-align: center;
+    margin-right: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 18px;
+    padding-top: 16px;
+}
+
+.pl-highlight {
+    background-color: whitesmoke;
+    color: black;
+}
+
+
+
+#canvas-container {
+    width: 80%;
+}
+
 #main-canvas {
     height: 100%;
     width: 100%;
