--- a/light_space/client/style.css
+++ b/light_space/client/style.css
@@ -10,10 +10,11 @@ body {
 #main-container {
     display: flex;
     flex-direction: row;
+    height: 100%;
 }
 
 #program-container {
-    width: 20%;
+    width: 30%;
     color: whitesmoke;
     font-family: 'JetBrains Mono', monospace;
     padding-top: 10px;
@@ -24,6 +25,17 @@ body {
 
 .program-line {
     max-width: 95%;
+    counter-increment: line;
+}
+
+.program-line::before {
+    content: counter(line);
+    display: inline-block;
+    font-weight: bold;
+    margin-left: -30px;
+    text-align: right;
+    width: 20px;
+    color: #ffffffab;
 }
 
 .livelit-window {
@@ -45,13 +57,13 @@ body {
     margin-bottom: 10px;
 }
 
-.livelit-window .gallery {
+.livelit-window .geometry-browser {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
-.livelit-window .gallery .gallery-item {
+.livelit-window .geometry-browser .gallery-item {
     height: 50px;
     width: 50px;
     background-color: whitesmoke;
@@ -59,6 +71,28 @@ body {
     margin-left: 10px;
     margin-bottom: 10px;
     cursor: pointer;
+}
+
+.livelit-window .point-picker {
+    display: flex;
+    flex-direction: column;
+}
+
+.livelit-window .point-picker .table-thumbnail {
+    height: 18mm;
+    width: 28mm;
+    border: 1px solid whitesmoke;
+}
+
+.livelit-window .point-picker .point-text {
+    margin-top: 10px;
+    font-weight: bold;
+    font-style: italic;
+}
+
+.livelit-window .point-picker .help-text {
+    margin-top: 10px;
+    font-style: italic;
 }
 
 .program-controls {
@@ -85,8 +119,6 @@ body {
     background-color: whitesmoke;
     color: black;
 }
-
-
 
 #canvas-container {
     width: 80%;
