--- a/light_space/client/style.css
+++ b/light_space/client/style.css
@@ -33,6 +33,7 @@ body {
     display: inline-block;
     font-weight: bold;
     margin-left: -30px;
+    margin-right: 10px;
     text-align: right;
     width: 20px;
     color: #ffffffab;
