--- a/light_space/client/style.css
+++ b/light_space/client/style.css
@@ -58,6 +58,27 @@ body {
     margin-bottom: 10px;
 }
 
+.livelit-window .button {
+    height: 18px;
+    width: 120px;
+    background-color: whitesmoke;
+    color: black;
+    text-align: center;
+    margin-right: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 12px;
+    padding-top: 8px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    padding-bottom: 4px;
+}
+
+.livelit-window .help-text {
+    margin-top: 10px;
+    font-style: italic;
+}
+
 .livelit-window .geometry-browser {
     display: flex;
     flex-direction: row;
@@ -88,11 +109,6 @@ body {
 .livelit-window .point-picker .point-text {
     margin-top: 10px;
     font-weight: bold;
-    font-style: italic;
-}
-
-.livelit-window .point-picker .help-text {
-    margin-top: 10px;
     font-style: italic;
 }
 
