--- a/light_space/client/style.css
+++ b/light_space/client/style.css
@@ -14,6 +14,7 @@ body {
 }
 
 #program-container {
+    font-size: 8pt;
     width: 30%;
     color: whitesmoke;
     font-family: 'JetBrains Mono', monospace;
@@ -157,7 +158,7 @@ body {
 }
 
 #canvas-container {
-    width: 80%;
+    width: 100%;
 }
 
 #main-canvas {
