program line text goes in its own div for proper gathering

--- a/light_space/client/style.css
+++ b/light_space/client/style.css
@@ -32,6 +32,10 @@ body {
     counter-increment: line;
 }
 
+.program-line-text {
+    display: inline-block;
+}
+
 .program-line::before {
     content: counter(line);
     display: inline-block;
