--- a/light_space/client/style.css
+++ b/light_space/client/style.css
@@ -103,13 +103,13 @@ body {
 
 /* Livelit-Specific Styles */
 
-.geometry-browser {
+.geometry-gallery {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
-.geometry-browser .gallery-item {
+.geometry-gallery .gallery-item {
     height: 50px;
     width: 50px;
     background-color: whitesmoke;
@@ -119,7 +119,7 @@ body {
     cursor: pointer;
 }
 
-.geometry-browser .gallery-item.geometry-highlight {
+.geometry-gallery .gallery-item.geometry-highlight {
     background-color: red;
 }
 
