--- a/light_space/client/style.css
+++ b/light_space/client/style.css
@@ -7,6 +7,15 @@ body {
     background-color: black;
 }
 
+.hidden {
+    display: none;
+}
+
+#root {
+    height: 100%;
+    width: 100%;
+}
+
 #main-container {
     display: flex;
     flex-direction: row;
