value preview thingy

--- a/light_space/client/style.css
+++ b/light_space/client/style.css
@@ -21,6 +21,11 @@ pre code.hljs {
     display: none;
 }
 
+.grayed {
+    color: #888888;
+    font-style: italic;
+}
+
 #root {
     height: 100%;
     width: 100%;
