--- a/light_space/client/style.css
+++ b/light_space/client/style.css
@@ -106,6 +106,11 @@ pre code.hljs {
 
 .livelit-window .title {
     font-weight: bold;
+    font-size: 10pt;
+    margin-bottom: 10px;
+}
+
+.module-value {
     margin-bottom: 10px;
 }
 
