--- a/light_space/client/style.css
+++ b/light_space/client/style.css
@@ -44,7 +44,7 @@ pre code.hljs {
 
 #program-container {
     font-size: 8pt;
-    height: 100%;
+    /* height: 100%; */
     width: 960pt;
     color: whitesmoke;
     font-family: 'JetBrains Mono', monospace;
@@ -253,6 +253,7 @@ pre code.hljs {
 
 #canvas-container {
     width: 100%;
+    height: 100%;
 }
 
 #main-canvas {
