--- a/light_space/client/style.css
+++ b/light_space/client/style.css
@@ -226,6 +226,13 @@ pre code.hljs {
     max-width: 100%;
 }
 
+#machine-param-list {
+    max-height: 200px;
+    overflow-y: scroll;
+    border: 1px solid white;
+    margin: 0px 10px 0px 10px;
+}
+
 #inst-list {
     max-height: 200px;
     overflow-y: scroll;
@@ -247,6 +254,13 @@ pre code.hljs {
     text-align: right;
     width: 20px;
     color: #ffffffab;
+}
+
+#vis-interpreter-list {
+    max-height: 200px;
+    overflow-y: scroll;
+    border: 1px solid white;
+    margin: 0px 10px 0px 10px;
 }
 
 #program-controls {
