--- a/client/style.css
+++ b/client/style.css
@@ -175,6 +175,12 @@ pre code.hljs {
     border: 1px solid whitesmoke;
 }
 
+.code-box {
+    max-height: 200px;
+    overflow-y: scroll;
+    border: 1px solid white;
+}
+
 /* Livelit-Specific Styles */
 
 .gallery {
@@ -298,6 +304,7 @@ pre code.hljs {
 
 .viz-interpreter-item {
     padding: 5px;
+    cursor: pointer;
 }
 
 #program-controls {
