--- a/client/style.css
+++ b/client/style.css
@@ -131,11 +131,17 @@ pre code.hljs {
     margin-bottom: 10px;
 }
 
-.clear-btn {
+.title-and-toggle-bar {
+    display: flex;
+}
+
+.toggle-window-btn {
     background-color: white;
     color: #23241f;
     width: fit-content;
     cursor: pointer;
+    margin-bottom: 10px;
+    margin-left: auto;
 }
 
 .livelit-window .content {
