--- a/client/style.css
+++ b/client/style.css
@@ -370,6 +370,11 @@ pre code.hljs {
     height: 100%;
 }
 
+#visualization-space-container {
+    width: 100%;
+    height: 100%;
+}
+
 #main-canvas {
     height: 100%;
     width: 100%;
