fix syntax highlighting, turns out i should read error messages

--- a/client/style.css
+++ b/client/style.css
@@ -101,7 +101,7 @@ pre code.hljs {
 
 #program-lines {
     border: 1px dashed white;
-    padding: 20px;
+    padding: 20px 20px 20px 35px;
 }
 
 .program-line {
