last 💅 of the day

--- a/client/style.css
+++ b/client/style.css
@@ -102,6 +102,7 @@ pre code.hljs {
 #program-lines {
     border: 1px dashed white;
     padding: 20px 20px 20px 35px;
+    outline: none;
 }
 
 .program-line {
