--- a/client/style.css
+++ b/client/style.css
@@ -162,6 +162,12 @@ pre code.hljs {
     display: inline-block;
 }
 
+.program-line .comment {
+    color: #aaaaaa;
+    display: inline-block;
+    font-style: italic;
+}
+
 /* Shared Livelit Styles */
 
 .livelit-window {
