--- a/client/style.css
+++ b/client/style.css
@@ -185,6 +185,11 @@ pre code.hljs {
     margin-bottom: 10px;
 }
 
+.livelit-window .subtitle {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
 .module-value {
     margin-bottom: 10px;
     overflow: hidden;
@@ -239,6 +244,15 @@ pre code.hljs {
     height: 100%;
     width: 100%;
     border: 1px solid whitesmoke;
+}
+
+.livelit-window input[type="text"] {
+      background-color: #23241f;
+      color: whitesmoke;
+      font-family: 'JetBrains Mono', monospace;
+      border: 1px solid whitesmoke;
+      width: 50px;
+      margin: 5px 0px 5px 10px;
 }
 
 .code-box {
