after much waffling, we just get a bitmap of the canvas For now we have it displayed via data url on the projector module. the next step would be getting this image from the correct angle, probably by procedurally moving the camera, calling .toDataURL(), the moving it back. However, this approach depends on the size of the visualization space canvas which, if we move back inline with code, would be much smaller. In this regard, we might actually want to completely generate a new scene, camera, renderer, and renderer dom element, cloning as necessary, then deallocating everything. all this for a stupid photo!

--- a/client/style.css
+++ b/client/style.css
@@ -253,6 +253,11 @@ pre code.hljs {
     border: 1px solid whitesmoke;
 }
 
+.livelit-window .image-thumbnail img {
+    max-height: 100%;
+    max-width: 100%;
+}
+
 .livelit-window input[type="text"] {
       background-color: #23241f;
       color: whitesmoke;
