Revert "[Dead End] committing disastrous draft-js attempt for posterity"
This reverts commit 0b0c718e33a4e33c976d5a6d058986f781e8942e.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -138,7 +138,7 @@ pre code.hljs {
     outline: none;
 }
 
-.program-line-text {
+.program-line {
     counter-increment: line;
     color: #dedede;
     margin: 0px;
@@ -149,7 +149,7 @@ pre code.hljs {
     outline: none;
 }
 
-.program-line-text::before {
+.program-line::before {
     content: counter(line);
     display: inline-block;
     font-weight: bold;
